--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#ignore image folder
+#ignore image folder & nodemon.json
+nodemon.json
 Img/
 
 # Runtime data
