--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-image-magnify": "^2.7.0",
     "react-image-zoom": "^0.7.0"
   },
   "devDependencies": {
