--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
     "jest-transform-stub": "^1.0.0",
+    "react-test-renderer": "^16.4.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
