--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
-    "nodemon": "nodemon ./server",
+    "node": "node ./server",
     "start": "webpack --mode development -w --open",
     "build": "webpack --mode production"
   },
@@ -42,15 +42,12 @@
     "babel-preset-jest": "^23.2.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "chai": "^4.1.2",
-    "chai-enzyme": "^1.0.0-beta.1",
     "css-loader": "^1.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
     "jest-transform-stub": "^1.0.0",
-    "react-test-renderer": "^16.4.1",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.1",
     "webpack-cli": "^3.1.0",
