--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ typings/
 
 # Serverless directories
 .serverless
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
